--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,15 @@
     padding: 0;
     margin: 0;
 }
+
+@font-face {
+    font-family: 'Satoshi-Variable';
+    src: url('../src/assets/fonts/satoshi/Satoshi-Variable.woff2') format('woff2'),
+         url('../src/assets/fonts/satoshi/Satoshi-Variable.woff') format('woff'),
+         url('../src/assets/fonts/satoshi/Satoshi-Variable.ttf') format('truetype');
+
+         font-weight: 300 900;
+         font-display: swap;
+         font-style: normal;
+  }
+  
