--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -50,3 +50,18 @@ h1{
   line-height: 0.9em;
   text-transform: uppercase;
 }
+
+
+
+@keyframes slideOutLeft {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+.slide-out-left {
+  animation: slideOutLeft 0.5s ease-out forwards;
+}
