refactor: Minor changes in animation and in function
Added images

--- a/src/components/parallax/Parallax.css
+++ b/src/components/parallax/Parallax.css
@@ -1,13 +1,11 @@
 *{
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
   }
 
   #main {
     height: 100vh;
     width: 100%;
-    background-color: black;
+    background-color: #F8F8F5;
   }
   
   .img{
@@ -24,7 +22,7 @@
   .img2{
     width: 100%;
     height: auto;
-    background-image: url(/diningroom.JPG);
+    background-image:url(/diningroom.JPG);
     background-size: cover; 
     /* background-size: 130%; */
     /* img zoom */
@@ -34,7 +32,7 @@
   .img3{
     width: 100%;
     height: auto;
-    background-image: url(/bedroom.jpg);
+    background-image:url(/bedroom.jpg);
     background-size: cover; 
     background-position: center;
     transition: cubic-bezier(0.165, 0.84, 0.44, 1) 1s;
