--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,31 @@
     padding: 0;
     margin: 0;
 }
+#footer-bg-img{
+    image-rendering: auto;
+    }
+
+
+    ::-webkit-scrollbar {
+        width: 10px;
+        
+      }
+      
+      /* Track */
+      ::-webkit-scrollbar-track {
+        background: #F8F8F5; 
+      }
+       
+      /* Handle */
+      ::-webkit-scrollbar-thumb {
+        background: #515151; 
+        border-radius: 100px;
+      }
+      
+      /* Handle on hover */
+      ::-webkit-scrollbar-thumb:hover {
+        background: #555; 
+      }
 
 @font-face {
     font-family: 'Satoshi-Variable';
