--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -40,7 +40,7 @@ h1{
   position: absolute;
   font-size: 15vw; 
   z-index: 1;
-  top: 60px;
+  /* top: 60px; */
   background-color: white;
   color: black;
   position: absolute;
