--- a/src/components/parallax/Parallax.css
+++ b/src/components/parallax/Parallax.css
@@ -6,6 +6,10 @@
     height: 100vh;
     width: 100%;
     background-color: #F8F8F5;
+    /* background-image: url('../../assets/images/experienceTheArt.png');
+    background-size: cover; 
+    background-position: center;
+     */
   }
   
   .img{
