--- a/src/components/blog/BlogCard.css
+++ b/src/components/blog/BlogCard.css
@@ -1,12 +1,19 @@
 @keyframes marquee {
-    0% { transform: translateX(100%); }
-    100% { transform: translateX(-100%); }
-    
-  }
-  
-  .animate-marquee {
-    animation: marquee 20s linear infinite;
+  0% {
+    transform: translateX(100%);
   }
 
- 
-  
+  100% {
+    transform: translateX(-100%);
+  }
+
+}
+
+.bg-gradient {
+  background: rgb(0, 0, 0);
+  background: linear-gradient(180deg, rgba(0, 0, 0, 1) 75%, rgba(80, 83, 84, 0) 97%, rgba(0, 0, 0, 0) 100%);
+}
+
+.animate-marquee {
+  animation: marquee 20s linear infinite;
+}
